<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_header"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView3"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="189dp"
        android:layout_height="253dp"
        android:id="@+id/anti_isis"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/anti_isis" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_header"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryText"
        android:textSize="32dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:gravity="bottom|end"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rights"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>